BIP39 root key is validated before deriving addrs

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -18964,6 +18964,10 @@ window.Entropy = new (function() {
     }
 
     function calcBip32ExtendedKey(path) {
+        // Check there's a root key to derive from
+        if (!bip32RootKey) {
+            return bip32RootKey;
+        }
         var extendedKey = bip32RootKey;
         // Derive the key from the path
         var pathBits = path.split("/");
@@ -19097,6 +19101,10 @@ window.Entropy = new (function() {
                     return "Value of " + indexValue + " at depth " + depth + " must be less than " + maxIndexValue;
                 }
             }
+        }
+        // Check root key exists or else derivation path is useless!
+        if (!bip32RootKey) {
+            return "No root key";
         }
         // Check no hardened derivation path when using xpub keys
         var hardened = path.indexOf("'") > -1;
