BIP39 bugfix - left-padding of entropy as binary

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -19488,7 +19488,7 @@ window.Entropy = new (function() {
             var hash = sjcl.hash.sha256.hash(entropy.cleanStr);
             var hex = sjcl.codec.hex.fromBits(hash);
             bits = BigInteger.parse(hex, 16).toString(2);
-            for (var i=0; i<256-bits.length; i++) {
+            while (bits.length % 256 != 0) {
                 bits = "0" + bits;
             }
             // Truncate hash to suit number of words
