Quotes from In Praise Of Idleness

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -254,6 +254,14 @@ http://blog.ycombinator.com/basic-income/
 
 <hr>
 
+<p>Any user research will involve interacting with users, but it's not to gather their opinions, which is almost always irrelevant, but to document their behavior, needs and drives.</p>
+<a href="https://news.ycombinator.com/item?id=13307040">
+https://news.ycombinator.com/item?id=13307040
+</a>
+<p>fnordsensei</p>
+
+<hr>
+
 <h1 id="authors">Authors</h1>
 
 <h2 id="my-life-on-the-road">My Life On The Road - Gloria Steinem</h2>
@@ -586,6 +594,25 @@ http://blog.ycombinator.com/basic-income/
 
 <p>[William] James, in elucidation, says that the function of philosophy is to find out what difference it makes to you or me if this or that world-formula is true. In this way theories become instruments, not answers to enigmas.</p>
 <p>p748</p>
+
+<hr>
+
+<h2 id="in-praise-of-idleness">In Praise Of Idleness - Bertrand Russell</h2>
+
+<p>But without a considerable amount of leisure a man is cut off from many of the best things.</p>
+
+<p>Academic institutions, therefore, useful as they are, are not adequate guardians of the interests of civilisation in a world where everyone outside their walls is too busy for unutilitarian pursuits.</p>
+
+<p>The above quotes are interesting to me because they lend themselves to some unanswered but important questions:<p>
+<ul>
+    <li>What constitutes 'the best things'?</li>
+    <li>What are 'the interests of civilisation'?</li>
+</ul>
+<p>Perhaps an attempt to address this is given near the end of the essay:</p>
+
+<p>Above all, there will be happiness and joy of life, instead of frayed nerves, weariness, and dyspepsia. The work exacted will be enough to make leisure delightful, but not enough to produce exhaustion. Since men will not be tired in their spare time, they will not demand only such amusements as are passive and vapid.</p>
+
+<p>Good nature is, of all moral qualities, the one that the world needs most, and a good nature is the result of ease and security, not of a life of arduous struggle.</p>
 
 <hr>
 
