BIP39 defaults to Raw Entropy for mnemonic length

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -186,9 +186,9 @@
                                     <label class="col-sm-3 control-label" data-translate>Mnemonic Length</label>
                                     <div class="col-sm-9">
                                         <select class="mnemonic-length form-control">
-                                            <option value="raw" data-translate>From entropy length (3 words per 32 bits)</option>
+                                            <option value="raw" selected data-translate>Use Raw Entropy (3 words per 32 bits)</option>
                                             <option value="12">12 <span data-translate>Words</span></option>
-                                            <option value="15" selected>15 <span data-translate>Words</option>
+                                            <option value="15">15 <span data-translate>Words</option>
                                             <option value="18">18 <span data-translate>Words</span></option>
                                             <option value="21">21 <span data-translate>Words</span></option>
                                             <option value="24">24 <span data-translate>Words</span></option>
