BIP39 ethereum addresses have checksum

--- a/bip39/index.html
+++ b/bip39/index.html
@@ -41770,7 +41770,9 @@ window.Entropy = new (function() {
                     var privKeyBuffer = key.privKey.d.toBuffer();
                     privkey = privKeyBuffer.toString('hex');
                     var addressBuffer = ethUtil.privateToAddress(privKeyBuffer);
-                    address = "0x" + addressBuffer.toString('hex');
+                    var hexAddress = addressBuffer.toString('hex');
+                    var checksumAddress = ethUtil.toChecksumAddress(hexAddress);
+                    address = ethUtil.addHexPrefix(checksumAddress);
                 }
                 addAddressToList(indexText, address, pubkey, privkey);
             }, 50)
