Add new bitcoin multisig tool

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
                 </ul>
             </li>
             <li>
+                <p>Multisig Tool</p>
+                <ul>
+                    <li>
+                        <a href="/multisig/">Site</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/iancoleman/multisig">Source code</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
                 <p>Shamir Secret Sharing Scheme Tool</p>
                 <ul>
                     <li>
