--- a/multisig/index.html
+++ b/multisig/index.html
@@ -154,11 +154,17 @@
                     discovery, which may pose a privacy issue for some users.
                     </p>
                     <button class="discover btn btn-default" data-translate>Discover</button>
+                    <button class="cancel-discover btn btn-default hidden" data-translate>Cancel</button>
                     <div class="discovered">
                         <!-- populated by javascript -->
                     </div>
                     <div class="discover-in-progress hidden">
-                        <p data-translate>...discovery in progress.</p>
+                        <p>
+                            Completed
+                            <span class="remaining"></span>
+                            of
+                            <span class="total"></span>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -13389,6 +13395,7 @@ Translate = new (function() {
     var parts = [];
     var orderings = [];
     var discoveryProcesses = [];
+    var discoveriesCompleted = 0;
 
     var DOM = {};
     DOM.feedback = $(".feedback");
@@ -13409,6 +13416,9 @@ Translate = new (function() {
     DOM.discover = $(".discover");
     DOM.discovered = $(".discovered");
     DOM.discoverInProgress = $(".discover-in-progress");
+    DOM.remainingDiscoveries = $(".discover-in-progress .remaining");
+    DOM.totalDiscoveries = $(".discover-in-progress .total");
+    DOM.cancelDiscover = $(".cancel-discover");
 
     function init() {
         // Events
@@ -13417,6 +13427,7 @@ Translate = new (function() {
         DOM.signatoriesCount.on("change", detailsChanged);
         DOM.partOrder.on("change", detailsChanged);
         DOM.discover.on("click", discoverClicked);
+        DOM.cancelDiscover.on("click", cancelDiscoverClicked);
         setQrEvents(DOM.showQrEls);
         hideFeedback();
         populateNetworkSelect();
@@ -13459,6 +13470,11 @@ Translate = new (function() {
         stopExistingDiscoveries();
         clearDisplayedDiscoveries();
         discoverUsedAddresses();
+    }
+
+    function cancelDiscoverClicked() {
+        stopExistingDiscoveries();
+        hideDiscoverInProgress();
     }
 
     // Private methods
@@ -13504,6 +13520,9 @@ Translate = new (function() {
         if (orderings.length == 0) {
             return;
         }
+        var totalDiscoveries = orderings.length * (orderings[0].length + 1);
+        DOM.totalDiscoveries.text(totalDiscoveries);
+        discoveriesCompleted = 0;
         showDiscoverInProgress();
         var p = new Discover({
             orderings: orderings,
@@ -13517,6 +13536,8 @@ Translate = new (function() {
     }
 
     function displayDiscovery(el) {
+        discoveriesCompleted = discoveriesCompleted + 1;
+        showDiscoverInProgress();
         DOM.discovered.append(el);
     }
 
@@ -13535,10 +13556,15 @@ Translate = new (function() {
     }
 
     function showDiscoverInProgress() {
+        DOM.remainingDiscoveries.text(discoveriesCompleted);
+        DOM.cancelDiscover.removeClass("hidden");
+        DOM.discover.addClass("hidden");
         DOM.discoverInProgress.removeClass("hidden");
     }
 
     function hideDiscoverInProgress() {
+        DOM.cancelDiscover.addClass("hidden");
+        DOM.discover.removeClass("hidden");
         DOM.discoverInProgress.addClass("hidden");
     }
 
