Add quote from GiveDirectly

--- a/quotes/index.html
+++ b/quotes/index.html
@@ -55,6 +55,11 @@ https://www.youtube.com/watch?v=LpVStpJlHEg#t=7m20s
 
 <hr>
 
+<p>"How can we help poor people move out of extreme poverty?" One seemingly obvious way is the approach of GiveDirectly: Unconditional Cash Transfers, aka just give people money, trusting that poor people know more about their own needs than donors and development specialists from far away.</p>
+<p>GiveDirectly</p>
+
+<hr>
+
 <h1 id="programmers">Programmers</h1>
 
 <p>There is no single, standardized statement of the Unix philosophy, but perhaps the simplest description would be: "Write programs that are small, simple and transparent. Write them so that they do only one thing, but do it well and can work together with other programs." That is, the philosophy centers around the concepts of smallness, simplicity, modularity, craftsmanship, transparency, economy, diversity, portability, flexibility and extensibility.</p>
