Blocksize calculator big-blocks page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                         <a href="/blocksize/month-by-month/">Month-by-month</a>
                     </li>
                     <li>
+                        <a href="/blocksize/big-blocks/">Scaling With Big Blocks</a>
+                    </li>
+                    <li>
                         <a href="https://github.com/iancoleman/blocksize_calculator">Source code</a>
                     </li>
                 </ul>
