Add content for Exploring The CIA World Factbook

--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
                 </ul>
             </li>
             <li>
+                <p>CIA World Factbook API</p>
+                <ul>
+                    <li>
+                        <a href="https://www.github.com/iancoleman/cia_world_factbook_api#data">Latest and Historical Data</a>
+                    </li>
+                    <li>
+                        <a href="/exploring-the-cia-world-factbook/">Examples</a>
+                    </li>
+                    <li>
+                        <a href="https://www.github.com/iancoleman/cia_world_factbook_api">Source code</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
                 <p>Quotes</p>
                 <ul>
                     <li>
