--- a/blocksize/index.html
+++ b/blocksize/index.html
@@ -68,7 +68,15 @@
                 Simulate a
                 Max Block Size of
                 <input class="block-size form-control small" type="number" value="1" id="block-size" x-url-param>
-                MB at an average mining rate of
+                <div class="popup">
+                    MB
+                    <div class="popup-content">
+                        <div>
+                            A megabyte is 1024 &times; 1024 bytes.
+                        </div>
+                    </div>
+                </div>
+                at an average mining rate of
                 <input class="blocks form-control small" type="number" value="1" id="block-rate" x-url-param>
                 <span class="block-grammar">block</span>
                 every
@@ -88,10 +96,10 @@
                             Depending on network topology.
                         </div>
                         <div>
-                            1 hop covers <span class="peers">8</span><sup>1</sup> = 8 nodes.
+                            1 hop covers <span class="peers">8</span><sup>1</sup> = <span class="hop-1-nodes">8</span> nodes.
                         </div>
                         <div>
-                            2 hops covers <span class="peers">8</span><sup>2</sup> = 64 nodes.
+                            2 hops covers <span class="peers">8</span><sup>2</sup> = <span class="hop-2-nodes">64</span> nodes.
                         </div>
                         <div>
                             ...
@@ -125,15 +133,17 @@
                                             <span class="down">?</span>
                                             <div class="popup-content">
                                                 <span class="block-size">1</span> MB block &times;
+                                                1024 &times; 1024 bytes per MB &times;
                                                 8 bits per byte &times;
                                                 (<span class="blocks">1</span> &div;
                                                 <span class="time">600</span>) blocks per second &times;
                                                 1 download peer &times;
                                                 <span class="hops">4</span> hops
+                                                &div; 1000 &div; 1000 bits per megabit
                                                 =
                                                 <strong><span class="down">?</span> Mbps</strong>
                                                 <br>
-                                                =<span class="block-size">1</span>*8*(<span class="blocks">1</span>/<span class="time">600</span>)*1*<span class="hops">4</span>
+                                                =<span class="block-size">1</span>*1024*1024*8*(<span class="blocks">1</span>/<span class="time">600</span>)*1*<span class="hops">4</span>/1000/1000
                                                 <br>
                                                 <span>
                                                     This is the
@@ -151,16 +161,18 @@
                                             <span class="up">?</span>
                                             <div class="popup-content">
                                                 <span class="block-size">1</span> MB block &times;
+                                                1024 &times; 1024 bytes per MB &times;
                                                 8 bits per byte &times;
                                                 (<span class="blocks">1</span> &div;
                                                 <span class="time">600</span>) blocks per second &times;
                                                 (<span class="peers">8</span> -
                                                 1) upload peers &times;
                                                 <span class="hops">4</span> hops
+                                                &div; 1000 &div; 1000 bits per megabit
                                                 =
                                                 <strong><span class="up">?</span> Mbps</strong>
                                                 <br>
-                                                =<span class="block-size">1</span>*8*(<span class="blocks">1</span>/<span class="time">600</span>)*(<span class="peers">8</span>-1)*<span class="hops">4</span>
+                                                =<span class="block-size">1</span>*1024*1024*8*(<span class="blocks">1</span>/<span class="time">600</span>)*(<span class="peers">8</span>-1)*<span class="hops">4</span>/1000/1000
                                                 <br>
                                                 <span>
                                                     This is the
@@ -174,14 +186,50 @@
                                     </tr>
                                 </table>
                             </td>
-                            <td>Mbps</td>
+                            <td>
+                                <div class="popup">
+                                    Mbps
+                                    <div class="popup-content">
+                                        <div>
+                                            A megabit is 1000 &times; 1000 bits.
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>Data Cap</td>
                             <td>must be at least</td>
-                            <td class="data-cap">?</td>
                             <td>
-                                GB per
+                                <div class="popup">
+                                    <span class="data-cap">?</span>
+                                    <div class="popup-content">
+                                        <div>
+                                            <span class="block-size">1</span> MB block &times;
+                                            (<span class="blocks">1</span> &div;
+                                            <span class="time">600</span>) blocks per second &times;
+                                            60 &times; 60 &times; 24 &times; 365 seconds per year
+                                            &div; 12 months per year
+                                            &div; 1024 megabytes per gigabyte &times;
+                                            <span class="peers">8</span> peers
+                                            =
+                                            <strong><span class="data-cap">?</span> GB per month</strong>
+                                            <br>
+                                            =<span class="block-size">1</span>*(<span class="blocks">1</span>/<span class="time">600</span>)*(60*60*24*365)/12/1024*<span class="peers">8</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="popup">
+                                    GB
+                                    <div class="popup-content">
+                                        <div>
+                                            A gigabyte is 1024 &times; 1024 &times; 1024 bytes.
+                                        </div>
+                                    </div>
+                                </div>
+                                per
                                 <div class="popup">
                                 month
                                     <div class="popup-content">
@@ -193,13 +241,69 @@
                         <tr>
                             <td>Supplied Disk Capacity</td>
                             <td>must be at least</td>
-                            <td class="disk-consumption">?</td>
-                            <td>GB per year</td>
+                            <td>
+                                <div class="popup">
+                                    <span class="disk-consumption">?</span>
+                                    <div class="popup-content">
+                                        <div>
+                                            <span class="block-size">1</span> MB block &times;
+                                            (<span class="blocks">1</span> &div;
+                                            <span class="time">600</span>) blocks per second &times;
+                                            60 &times; 60 &times; 24 &times; 365 seconds per year
+                                            &div; 1024 megabytes per gigabyte
+                                            =
+                                            <strong><span class="disk-consumption">?</span> GB per year</strong>
+                                            <br>
+                                            =<span class="block-size">1</span>*(<span class="blocks">1</span>/<span class="time">600</span>)*(60*60*24*365)/1024
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                GB per
+                                <div class="popup">
+                                    year
+                                    <div class="popup-content">
+                                        <div>
+                                            A year is 365 days.
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
                             <td>Transaction processing</td>
                             <td>must be at least</td>
-                            <td class="processing">?</td>
+                            <td>
+                                <div class="popup">
+                                    <span class="processing">?</span>
+                                    <div class="popup-content">
+                                        <div>
+                                            <span class="block-size">1</span> MB block &times;
+                                            1024 &times; 1024 bytes per megabyte &times;
+                                            (<span class="blocks">1</span> &div;
+                                            <span class="time">600</span>) blocks per second &div;
+                                            <span class="min-tx-size">226</span> bytes per tx &times;
+                                            <span class="hops">4</span> hops
+                                            =
+                                            <strong><span class="processing">?</span> tx per second</strong>
+                                            <br>
+                                            =<span class="block-size">1</span>*1024*1024*(<span class="blocks">1</span>/<span class="time">600</span>)/<span class="min-tx-size">226</span>*<span class="hops">4</span>
+                                            <br>
+                                            <br>
+                                            <span>
+                                                This assumes the smallest transaction size, since it results
+                                                in the highest (worst-case) tx/s. However, the
+                                                <em>computation</em> to process a transaction varies
+                                                non-linearly, so even if you can process
+                                                <span class="processing">?</span> simple transactions per
+                                                second, you may not be able to process one large complex
+                                                <span class="block-size">?</span> MB transaction quickly enough.
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
                             <td>transactions per second</td>
                         </tr>
                     </tbody>
@@ -489,9 +593,14 @@
                    </ul>
                    <p>Without a full understanding of these complexities, there may be risk to changing the bitcoin max block size.</p>
                </div>
-               <div class="complexity">
+               <div class="open-source">
                    <h2>Open Source</h2>
                    <p>This project is on github - <a href="https://github.com/iancoleman/blocksize_calculator">https://github.com/iancoleman/blocksize_calculator</a>
+               </div>
+               <div class="more-reading">
+                   <h2>More Reading</h2>
+                   <a href="http://bitfury.com/content/5-white-papers-research/block-size-1.1.1.pdf">Block Size Increase - BitFury Group - Sep 06, 2015</a>
+                   <a href="https://petertodd.org/2016/delayed-txo-commitments">Making UTXO Set Growth Irrelevant With Low-Latency Delayed TXO Commitments - Peter Todd - May 17, 2016</a>
                </div>
             </div>
         </div>
