Add GPG public key

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <p>GPG</p>
+                <ul>
+                    <li>
+                        <a href="/B89A317AB798EB23.txt">My Public Key<a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </body>
 </html>
