--- a/exploring-the-cia-world-factbook/index.html
+++ b/exploring-the-cia-world-factbook/index.html
@@ -10,6 +10,7 @@
     <meta content="An exploration of data in the CIA World Factbook" name="description"/>
     <meta content="Ian Coleman" name="author" />
     <link type="image/x-icon" rel="icon" href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" />
+    <meta property="og:image" content="https://iancoleman.github.io/exploring-the-cia-world-factbook/major_urban_areas_chart.png">
 </head>
 
 <body>
@@ -565,7 +566,7 @@ Some countries categorize Population Distribution as part of Geography, others a
 </p>
 
 <p>
-For example, <a href="https://web.archive.org/web/20161218233357/https://www.cia.gov/library/publications/the-world-factbook/geos/ic.html">Iceland</a> has duplicate entries for Population Distribution under both Geography and People And society.
+For example, <a href="https://web.archive.org/web/20161218233357/https://www.cia.gov/library/publications/the-world-factbook/geos/ic.html">Iceland</a> has duplicate entries for Population Distribution under both Geography and People And Society.
 </p>
 
 <p>
