--- a/bip39/index.html
+++ b/bip39/index.html
@@ -118,7 +118,7 @@
         <div class="container">
 
             <h1 class="text-center">Mnemonic Code Converter</h1>
-            <p class="version">v0.2.2</p>
+            <p class="version">v0.2.3</p>
             <hr>
             <div class="row">
                 <div class="col-md-12">
@@ -22158,6 +22158,17 @@ bitcoinjs.bitcoin.networks.dash = {
   pubKeyHash: 0x4c,
   scriptHash: 0x10,
   wif: 0xcc,
+};
+
+bitcoinjs.bitcoin.networks.maza = {
+  messagePrefix: "unused",
+  bip32: {
+    public: 0x0488b21e,
+    private: 0x0488ade4
+  },
+  pubKeyHash: 0x32,
+  scriptHash: 0x09,
+  wif: 0xe0,
 };
 
 bitcoinjs.bitcoin.networks.dashtn = {
@@ -47353,6 +47364,15 @@ window.Entropy = new (function() {
                 setHdCoin(2);
             },
         },
+        {
+            name: "MAZA - Maza",
+            bip49available: false,
+            onSelect: function() {
+                network = bitcoinjs.bitcoin.networks.maza;
+                setHdCoin(13);
+            },
+        },
+
         {
             name: "NMC - Namecoin",
             bip49available: false,
